Implement multi IDP solution database changes

--- a/src/.env
+++ b/src/.env
@@ -28,3 +28,6 @@ APP_SECRET=ff6a23a839b39254894c0bd2c1a30646
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL=mysql://root:root@mysql:3306/symfony_db
 ###< doctrine/doctrine-bundle ###
+
+# default redirect callback uri
+DEFAULT_REDIRECT_URI="http://localhost:8080/login/sso/callback"
