--- a/src/composer.json
+++ b/src/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "guzzlehttp/guzzle": "^7.9",
         "jumbojett/openid-connect-php": "^1.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
