--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"  # Expose MySQL port
 
 volumes:
   db_data:
