--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ./src:/var/www/html
     depends_on:
       - mysql
+      - redis
 
   webserver:
     image: nginx:alpine
@@ -28,7 +29,12 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     ports:
-      - "3306:3306"  # Expose MySQL port
+      - "3306:3306"
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
 
 volumes:
   db_data:
