--- a/src/composer.json
+++ b/src/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.2",
         "guzzlehttp/guzzle": "^7.9",
         "jumbojett/openid-connect-php": "^1.0",
+        "predis/predis": "^2.2",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
