--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -14,6 +14,12 @@ services:
     GuzzleHttp\Client:
         arguments:
             - [ ]
+    Predis\Client:
+        arguments:
+            $parameters:
+                scheme: 'tcp'
+                host: 'redis' # This should match the service name in your docker-compose.yml
+                port: 6379
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
